@@ -3,7 +3,7 @@
  - Mod: Firing BFG now requires captcha.
  - Fix: Jump Zone for BHG can now find needles in haystacks.
  - UI : Reasons for not being able to use a BHG function now always displayed for every task.
- - Fix: Instead of going via parliament, go via body to view_laws.  This allows everyone access to passed laws by a station.
+ - Fix: Instead of going via parliament, go via body or star to view_laws.  This allows everyone access to passed laws by a station.
 
 3.0907:
  - Add: Timer added to colony object preventing passage into Neutral Zone.
@@ -13,6 +13,7 @@
  - Add: Bugout task for spies added to get spies home.
  - Mod: Replace cheap plastic parts on Space Station with steel.
  - Mod: Slight tweaking of AI behaviours.
+ - Mod: Police Stations now have more thorough security on incoming visitors.
 
 3.0906:
  - Fix: Some fixes to the send_ship_types API call.
